# pyf90

./: LICENSE  README.md  meson.build  pyproject.toml
pyfort/: __init__.py
scripts/: main.py
src/futils/: myext1.f90  myext2.f90
src/pyf90/: __init__.py  pycode.py
tests/: test_main.py
